syntax = "proto3";




message DobotRealTimeData{
	enum DobotConnectState
	{
		CONNECTED = 0;
		DISCONNECTED = 1;
	}

	optional int32 id = 1;
	DobotConnectState liveState = 2;
	repeated float pose =3;
	optional string alarmState = 4;
	repeated bool endEffectorSuctionCup = 5;
	optional string dateTime = 6;

}